@@ -1,0 +1,7 @@
+# Tools path
+[tools]
+ffmpeg=ffmpeg
+ffprobe=ffprobe
+kt-toolbox=kt-toolbox
+mp2tsms=mp2tsms
+videoparser=videoparser
