@@ -5,11 +5,13 @@ AC_INIT([python-toolbox2],[0.6.0~dev])
 AM_INIT_AUTOMAKE([foreign])
 
 AM_PATH_PYTHON
+AC_PROG_SED
 AC_PATH_PROG(TXT2TAGS, txt2tags)
 
 AC_CONFIG_FILES([
     Makefile
     bin/Makefile
+    conf/Makefile
     doc/Makefile
     toolbox2/Makefile
 ])
