@@ -11,5 +11,6 @@ Package: python-toolbox2
 XB-Python-Version: ${python:Versions}
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, ffmpeg-static (>= 0.11~), kt-toolbox (>= 1.0.4)
+Recommends: sjconf-toolbox2
 Description: SmartJog toolbox2 python module
  Module that provide generic interfaces to describe and manage actions.
