@@ -3,6 +3,7 @@ Version 0.6.0~dev
 	* Implement _setup method in parent class (Worker).
 	* AVInfo class code cleanup.
 	* Ignore empty string as argument value in Worker.get_args.
+	* Add worker configuration system, closes: #5764.
 
 Version 0.5.0 Released on 2012/03/29
 
